pamc/src/tests/sample_code/should_fail/type_check/non_adt_matchee/type0.ph
type U {
    .U: U,
}

let foo = fun foo_(x: U): U {
    match U {}
};
